--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5300,11 +5300,12 @@ input[type="color"] {
 .tp-sv-item-two {
   border: 1px solid #3f3f47;
   border-radius: 20px;
-  padding-top: 90px;
-  padding-bottom: 90px;
-  padding-left: 50px;
+  padding: 20px;
+  /* padding-top: 90px; */
+  /* padding-bottom: 90px; */
+  /* padding-left: 50px; */
   position: relative;
-  padding-right: 44px;
+  /* padding-right: 44px; */
 }
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .tp-sv-item-two {
@@ -5319,8 +5320,8 @@ input[type="color"] {
   .tp-sv-item-two {
     padding-top: 30px;
     padding-bottom: 30px;
-    padding-left: 39px;
-    padding-right: 26px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -5340,15 +5341,15 @@ input[type="color"] {
   }
 }
 .tp-sv-item-two:hover {
-  border-color: #3f3f47;
+  /* border-color: #3f3f47; */
 }
 .tp-sv-item-two:hover::after {
-  height: 100%;
+  /* height: 100%; */
 }
 .tp-sv-item-two:hover .tp-sv-icon-two {
-  opacity: 1;
+  /* opacity: 1;
   visibility: visible;
-  transform: scale(1);
+  transform: scale(1); */
 }
 
 .tp-sv-icon-two {
@@ -5384,7 +5385,7 @@ input[type="color"] {
   font-size: 32px;
   font-weight: 500;
   color: var(--tp-common-white);
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 .tp-sv-content-tow p {
   font-size: 18px;
@@ -9165,7 +9166,8 @@ input[type="color"] {
   transition-delay: 0.2s;
 }
 .tp-team-title:hover {
-  color: var(--tp-theme-1);
+  /* color: var(--tp-theme-1); */
+  /* color: white; */
 }
 
 .tp-team-subtitle {
@@ -9398,7 +9400,7 @@ input[type="color"] {
   width: 102%;
   top: 0;
   left: -2px;
-  background: var(--tp-common-blue);
+  background-color: var(--tp-theme-primary);
   position: absolute;
   z-index: 1;
   opacity: 0;
@@ -9414,7 +9416,8 @@ input[type="color"] {
 }
 
 .tp-mission-tab button.active {
-  background-color: var(--tp-common-blue);
+  background-color: var(--tp-theme-primary);
+  /* background-color: pink; */
 }
 .tp-mission-tab button.active::before {
   opacity: 1;
@@ -13321,4 +13324,13 @@ blockquote cite::before {
   box-shadow: 2px #999;
   z-index: 100;
   padding-top: 15px;
+}
+.gradient-text {
+  background: linear-gradient(to right, red, blue);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.active-class {
+  background-color: var(--tp-theme-primary);
+  color: var(--tp-common-black);
 }
