--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13341,3 +13341,38 @@ blockquote cite::before {
     padding-top: 0px;
   }
 }
+.become {
+  color: black;
+  font-weight: bold;
+  font-size: 80px;
+}
+@media (max-width: 425px) {
+  .become {
+    font-size: 60px;
+  }
+}
+.reverse-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.column {
+  flex: 1;
+}
+@media (max-width: 768px) {
+  .reverse-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+  }
+}
+
+.banner {
+  padding-top: 180px;
+}
+@media (max-width: 425px) {
+  .banner {
+    padding-top: 60px;
+  }
+}
